// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-simple-toast #render should render alert simple toast 1`] = `
<gux-simple-toast accent="alert">
  <mock:shadow-root>
    <div class="gux-alert gux-icon">
      <slot name="icon"></slot>
    </div>
    <gux-truncate-beta class="gux-message" max-lines="2">
      <slot name="message"></slot>
    </gux-truncate-beta>
    <gux-dismiss-button class="gux-dismiss" position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast>
`;

exports[`gux-simple-toast #render should render neutral simple toast 1`] = `
<gux-simple-toast accent="neutral">
  <mock:shadow-root>
    <div class="gux-icon gux-neutral">
      <slot name="icon"></slot>
    </div>
    <gux-truncate-beta class="gux-message" max-lines="2">
      <slot name="message"></slot>
    </gux-truncate-beta>
    <gux-dismiss-button class="gux-dismiss" position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast>
`;

exports[`gux-simple-toast #render should render positive simple toast 1`] = `
<gux-simple-toast accent="positive">
  <mock:shadow-root>
    <div class="gux-icon gux-positive">
      <slot name="icon"></slot>
    </div>
    <gux-truncate-beta class="gux-message" max-lines="2">
      <slot name="message"></slot>
    </gux-truncate-beta>
    <gux-dismiss-button class="gux-dismiss" position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast>
`;

exports[`gux-simple-toast #render should render warning simple toast 1`] = `
<gux-simple-toast accent="warning">
  <mock:shadow-root>
    <div class="gux-icon gux-warning">
      <slot name="icon"></slot>
    </div>
    <gux-truncate-beta class="gux-message" max-lines="2">
      <slot name="message"></slot>
    </gux-truncate-beta>
    <gux-dismiss-button class="gux-dismiss" position="inherit"></gux-dismiss-button>
  </mock:shadow-root>
  <gux-icon decorative="" icon-name="user-add" slot="icon"></gux-icon>
  <div slot="message">
    This is the message
  </div>
</gux-simple-toast>
`;
